# tyco-c

./: CMakeLists.txt  README.md
include/: tyco_c.h
src/: tyco_c_api.cpp
tests/: c_api_test.cpp
